# hincode

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md
src/: lib.rs  main.rs
src/ai/: mod.rs  openai.rs  prompt.rs  provider.rs
src/cli/: args.rs  mod.rs  output.rs
src/config/: mod.rs
src/git/: analyzer.rs  mod.rs
src/review/: mod.rs
tests/: integration_test.rs
