[package]
name = "hincode"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ekent <ekentqin@hincode.com>"]
description = "AI-powered code review tool"
license = "MIT"
repository = "https://github.com/ekent/hincode"
keywords = ["code-review", "ai", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"

# Git
git2 = "0.18"

# AI & Network
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
regex = "1"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "hincode"
path = "src/main.rs"
